# Demothon-2026-Temp

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  _base.yaml  compose.s3.yaml  compose.yaml  finish.md
_worklog/: 2026-05-16-smart-commit.md  2026-06-01-architecture-diagram-realign.md
configs/: sample.portainer.password.txt
configs/dind/certs/: .gitignore
docs/: demo-plan.md  demo-runbook.md  index.html  instruction.md  introduction.pptx  runbook.html  transcript.md
docs/assets/css/: branded.css  page.css
docs/event-schemas/: README.md  flight-change.input.schema.json  flight-change.output.schema.json
fakegen/: README.md  main.py  pyproject.toml
fakegen/configs/: itinerary.schema.yaml  traveler.schema.yaml  trip.db.yaml  trip.schema.yaml  weather.db.yaml  weather.schema.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
kiosk/: Dockerfile  docker-compose.yml  env.example  pyproject.toml
kiosk/app/: chaos.py  config.py  dao.py  main.py  qr.py  session_store.py  trip_factory.py
kiosk/app/static/: kiosk.css  kiosk.js
kiosk/app/templates/: kiosk.html
kiosk/data/: regions.json
mockgen/: README.md  generate.py  pyproject.toml
mockgen/seeds/: storyline.yaml
profiles/sam-project/: README.md
publisher/: README.md  lib.py  publish_disruption.py  pyproject.toml
scripts/: bootstrap-env.sh  init-seaweedfs.sh  test-send-image-webui.sh  test-subscribe-visualization.sh
scripts/deployer/: deploy.sh  status.sh  undeploy.sh  update.sh
sponsor-specific/BrandedCSS/: index.css
(+62 files in other folders)
