[project]
name = "fakegen"
version = "0.1.0"
description = "Faker + YAML driven mock data generator with offset-aware date columns."
requires-python = ">=3.13"
dependencies = [
    "faker>=40",
    "loguru>=0.7",
    "pyyaml>=6",
    "sqlalchemy>=2.0",
]

[project.scripts]
fakegen = "main:main"

[tool.uv]
package = false
