[project]
name = "kiosk"
version = "0.1.0"
description = "Itinerary in Motion kiosk: random-trip landing + per-traveler chaos button."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-ulid>=3.0",
    "qrcode[pil]>=7.4",
    "loguru>=0.7.3",
    "publisher",
]

[tool.uv.sources]
publisher = { path = "../publisher", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
