[project]
name = "publisher"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "python-ulid>=3.0",
    "solace-pubsubplus>=1.11.0",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["__init__.py", "lib.py", "publish_disruption.py"]
sources = ["."]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "publisher/__init__.py"
"lib.py" = "publisher/lib.py"
"publish_disruption.py" = "publisher/publish_disruption.py"
